# snooker_3D

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert  flat.frag  flat.vert  instanced.vert  skybox.frag  skybox.vert
src/: Camera.cpp  Mesh.cpp  Shader.cpp  Table.cpp  Table.h  main.cpp
src/core/: Cubemap.cpp  Cubemap.h  Mesh.cpp  Mesh.h  Shader.h  Texture.cpp  Texture.h  miniaudio_impl.cpp  stb_impl.cpp
src/scene/: AimGuide.cpp  AimGuide.h  Ball.cpp  Ball.h  Camera.h  GameLogic.cpp  GameLogic.h  Physics.cpp  Physics.h  RedBalls.cpp  RedBalls.h  Table.cpp  Table.h
src/utils/: TextureGen.cpp  TextureGen.h
